# exam-kit

./: .gitignore  CMakeLists.txt  README.md
include/: solution.h
include/lib/: snippets.hpp
scripts/: pack.sh  run.sh  test.sh
src/: main.cpp  solution.cpp
tests/: test_solution.cpp
